--- a/css/styles.css
+++ b/css/styles.css
@@ -489,6 +489,21 @@ body {
   margin-bottom: 20px;
 }
 
+.adress-link {
+  font-style: normal;
+  font-size: 14px;
+  line-height: 1.7;
+  letter-spacing: 0.03em;
+  color: var(--white-text);
+  transition: color var(--transition-duration)
+    var(--transition-timing-function);
+}
+
+.adress-link:hover,
+.adress-link:focus {
+  color: var(--accent-color);
+}
+
 .footer-link {
   margin-right: 93px;
   font-style: normal;
@@ -500,7 +515,18 @@ body {
 }
 
 .footer-contact {
+  font-style: normal;
+  font-size: 14px;
+  line-height: 1.7;
+  letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
+  transition: color var(--transition-duration)
+    var(--transition-timing-function);
+}
+
+.footer-contact:hover,
+.footer-contact:focus {
+  color: var(--accent-color);
 }
 
 .footer-link:hover,
@@ -605,6 +631,14 @@ body {
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
   margin-right: 12px;
+  color: var(--white-text);
+}
+
+.footer-input::placeholder {
+  font-size: 16px;
+  line-height: 1.3;
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
 }
 
 .footer-form {
@@ -640,7 +674,7 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
-  min-width: 528px;
+  width: 528px;
   min-height: 581px;
   padding: 40px;
   background-color: var(--white-text);
@@ -677,11 +711,10 @@ body {
   margin-bottom: 12px;
   font-weight: 700;
   font-size: 20px;
-  line-height: calc (23 / 20);
+  line-height: calc(23 / 20);
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--main-text-color);
-  text-transform: uppercase;
 }
 
 .modal-field {
@@ -784,6 +817,7 @@ body {
 }
 
 .modal-privacy-text {
+  margin-left: 12px;
   font-size: 14px;
   line-height: 1.7;
   letter-spacing: 0.03em;
